--- a/index.html
+++ b/index.html
@@ -87,7 +87,16 @@
 				<div class="overlay-2"></div>
 				<div class="overlay-3"></div>
 				<div class="overlay-4"></div>
-				
+				<div class="container">
+					<div class="row no-gutters slider-text js-fullheight align-items-center">
+						<div class="col-md-10 col-lg-7 ftco-animate">
+							<div class="text w-100">
+								<h2>أهلا بك في مؤسسة سقاية </h2>
+								<h1 class="mb-3">تميز وتخصص في حفر الآبار وبناء المساجد</h1>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 
 			<div class="slider-item js-fullheight" style="background-image:url(images/bg_2.jpg);">
@@ -138,10 +147,8 @@
 						<span class="subheading">تعرف علينا</span>
 						<h2 class="mb-4">من نحن؟</h2>
 						<p>
-							هي مؤسسة متخصصة في المقاولات لحفر الآبار وبناء المساجد بسجل تجاري رقم: 1010665011 تهدف إلى
-							تقريب المسافات للراغبين في بناء المساجد أو حفر الآبار وتنفيذها نيابة عنهم خارج المملكة
-							العربية السعودية وعدد من الدول في قارتي أفريقيا وآسيا من خلال شراكات بناء مع عدد من الشركات
-							المتخصصة وعبر كادر خبير ومؤهل في كلا القارتين
+							نحن مؤسسة متخصصة في المقاولات لحفر الآبار وبناء المساجد بسجل تجاري برقم:1010665011
+							نسعى إلى تقريب المسافات للراغبين في بناء المساجد أو حفر الآبار خارج المملكة العربية السعودية عبر جهة مصرحة وموثوقة وذات خبرة، عبر شراكات بناءة مع جهات متخصصة، وكادر خبير ومؤهل في كل من قارتي آسيا وأفريقيا.
 						</p>
 						<section class="container">
 							<div class="video-wrap js-video-wrap">
@@ -283,7 +290,7 @@
 					<div class="causes causes-2 text-center ftco-animate">
 						<a href="#" class="img w-100" style="background-image: url(images/proj1.webp);"></a>
 						<div class="text p-3">
-							<h2>مشروع 1</h2>
+							<h2> مشروع حفر بئر بالدلو - غانا</h2>
 							<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia</p>
 							<div class="goal mb-4">
 								<p><span>$3,800</span> to go</p>
@@ -300,75 +307,20 @@
 					<div class="causes causes-2 text-center ftco-animate">
 						<a href="#" class="img w-100" style="background-image: url(images/proj2.webp);"></a>
 						<div class="text p-3">
-							<h2>مشروع 2</h2>
+							<h2>  
+								مشروع حفر بئر  سطحي بمضخة يدوية - بنغلاديش</h2>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-4">
 					<div class="causes causes-2 text-center ftco-animate">
-						<a href="#" class="img w-100" style="background-image: url(images/proj3.webp);"></a>
+						<a href="#" class="img w-100" style="background-image: url(images/mosque.jpg);"></a>
 						<div class="text p-3">
-							<h2>مشروع 3</h2>
+							<h2>مشروع بناء جامع صغير - غانا </h2>
 						</div>
 					</div>
 				</div>
 
-			</div>
-		</div>
-	</section>
-
-	<section class="ftco-counter" id="section-counter">
-		<div class="container">
-			<div class="row">
-				<!-- <div class="col-md-3 mb-5 mb-md-0 text-center text-md-left">
-					<h2 class="font-weight-bold" style="color: #fff; font-size: 22px;">We're on a mission to help all
-						your problems</h2>
-					<a href="#" class="btn btn-white btn-outline-white">Donate Now</a>
-				</div> -->
-				<div class="col-12">
-					<div class="row">
-						<div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
-							<div class="block-18 text-center">
-								<div class="text">
-									<strong class="number" data-number="88984">0</strong>
-								</div>
-								<div class="text">
-									<span>خبرة</span>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
-							<div class="block-18 text-center">
-								<div class="text">
-									<strong class="number" data-number="65000">0</strong>
-								</div>
-								<div class="text">
-									<span>خبرة</span>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
-							<div class="block-18 text-center">
-								<div class="text">
-									<strong class="number" data-number="77000">0</strong>
-								</div>
-								<div class="text">
-									<span>خبرة</span>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
-							<div class="block-18 text-center">
-								<div class="text">
-									<strong class="number" data-number="50">0</strong>
-								</div>
-								<div class="text">
-									<span>خبرة</span>
-																</div>
-							</div>
-						</div>
-					</div>
-				</div>
 			</div>
 		</div>
 	</section>
@@ -744,7 +696,10 @@
 	</footer>
 
 
-
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<a href="https://api.whatsapp.com/send?phone=+966506333518" class="float" target="_blank">
+	<i class="fa fa-whatsapp my-float"></i>
+	</a>
 
 	<!-- loader -->
 	<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
