--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 						<a href="#" class="block-20" style="background-image: url('images/mosque.jpg')">
 						</a>
 						<div class="text p-4">
-							<h3 class="heading">مشاريع بناء المساجد  تبدأ من	<span class="price">63,000 ر.س</span></h3>
+							<h3 class="heading">مشاريع بناء المساجد  تبدأ من	<span class="price">37999 ر.س</span></h3>
 						</div>
 					</div>
 				</div>
@@ -255,7 +255,7 @@
 						</a>
 						<div class="text p-4">
 						
-							<h3 class="heading">مشاريع حفر الآبار  تبدأ من	<span class="price">1,045 ر.س</span></h3>
+							<h3 class="heading">مشاريع حفر الآبار  تبدأ من	<span class="price">992 ر.س</span></h3>
 							
 						</div>
 					</div>
@@ -277,6 +277,38 @@
 			</div>
 		</div>
 	</section>
+
+	<section class="ftco-section ftco-no-pb" id="projects">
+		<div class="container">
+			<div class="row justify-content-center pb-5 mb-3">
+				<div class="col-md-7 heading-section text-center ftco-animate">
+					<!-- <span class="subheading">Our Causes</span> -->
+					<h2> عروض رمضان </h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-lg-6">
+					<div class="causes causes-2 text-center ftco-animate">
+						<a href="#" class="img w-100" style="background-image: url(images/proj4.jpg);"></a>
+						<div class="text p-3">
+							<h2> عرض رمضان 3 آبار في 3 دول بـ 2999 ريال</h2>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-6">
+					<div class="causes causes-2 text-center ftco-animate">
+						<a href="#" class="img w-100" style="background-image: url(images/proj5.jpg);"></a>
+						<div class="text p-3">
+							<h2>  
+								عرض رمضان 2 بئر في دولتين بـ 1949 ريال</h2>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</section>
+
 	<section class="ftco-section ftco-no-pb" id="projects">
 		<div class="container">
 			<div class="row justify-content-center pb-5 mb-3">
