--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 		</div>
 	</section>
 
-	<section class="ftco-section ftco-no-pb" id="projects">
+	<section class="ftco-section ftco-no-pb ramadanOffers" >
 		<div class="container">
 			<div class="row justify-content-center pb-5 mb-3">
 				<div class="col-md-7 heading-section text-center ftco-animate">
